# poc-python-deltars-upsert

./: README.md  RESULTS.md  docker-compose.yml  pyproject.toml
poc_python_deltars_upsert/: dataflow.py  main.py  sales_data.py
